force-app/main/default/objects/Marketing_Touchpoints__c/Marketing_Touchpoints__c.object-meta.xml
<CustomObject>
    <description>A list of all the marketing touchpoints</description>
    <label>Marketing Touchpoint</label>
    <nameField>
        <label>Source</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Touchpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>