force-app/main/default/objects/Marketing_Touchpoints__c/fields/Current_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Lifecycle_Stage__c</fullName>
    <label>Current Lifecycle Stage</label>
    <length>180</length>
    <type>Text</type>
</CustomField>