force-app/main/default/objects/Marketing_Touchpoints__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Marketing Touchpoints</relationshipLabel>
    <relationshipName>Marketing_Touchpoints</relationshipName>
    <type>Lookup</type>
</CustomField>