force-app/main/default/objects/Marketing_Touchpoints__c/fields/Source_Drill_Down_2__c.field-meta.xml
<CustomField>
    <fullName>Source_Drill_Down_2__c</fullName>
    <label>Source Drill Down 2</label>
    <type>TextArea</type>
</CustomField>