force-app/main/default/objects/Marketing_Touchpoints__c/fields/Touchpoint_Position__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Position__c</fullName>
    <label>Touchpoint Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>